# leptos_toy

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  README.md
app/src-tauri/: tauri.conf.json
db/migrations/: 20260130123000_create_photo_gallery_schema.sql
docs/: DEVELOPMENT_GUIDELINES.md  SERVICE_PLANNING.md
ui/: Cargo.toml  index.html
ui/src/: main.rs
ui/src/domain/entities/: photo.rs
ui/src/infrastructure/repositories/: mock_photo_repository.rs  mod.rs
ui/src/presentation/: mod.rs
ui/src/presentation/components/: mod.rs
ui/src/presentation/components/common/: mod.rs  pull_to_refresh.rs
ui/src/presentation/components/photo/: mod.rs  photo_card.rs  photo_preview_modal.rs
ui/src/presentation/layouts/: main_layout.rs
ui/src/presentation/pages/: gallery.rs
ui/src/presentation/view_models/: gallery_vm.rs  mod.rs
