[workspace]
resolver = "3"
members = ["ui", "app/src-tauri"]

[workspace.dependencies]
leptos = { version = "0.8.15", features = ["csr"] }
chrono = { version = "0.4.39", features = ["serde", "wasmbind"] }
uuid = { version = "1.12.1", features = ["v4", "js", "serde"] }
console_error_panic_hook = "0.1.7"
gloo-timers = { version = "0.3.0", features = ["futures"] }
serde = { version = "1.0.217", features = ["derive"] }
wasm-bindgen = "0.2.108"
