[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos.workspace = true
chrono.workspace = true
uuid.workspace = true
console_error_panic_hook.workspace = true
gloo-timers.workspace = true
serde.workspace = true
wasm-bindgen.workspace = true

[dependencies.web-sys]
version = "0.3"
features = [
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "IntersectionObserverInit",
    "Element",
    "HtmlElement",
]

[package.metadata.leptos]
tailwind-input-file = "style/input.css"
